--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@ venv/
 build/
 dist/
 
+# Chrome browser profiles (session persistence)
+chrome_profiles/
+
+# User data (conversations, message history)
+data/conversations/
+data/message_history.csv
+
 # Node
 node_modules/
 npm-debug.log
